kubernetes/apps/gdd-service/whisparr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisparr
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media Management"
    gethomepage.dev/name: Whisparr
    gethomepage.dev/icon: whisparr.png
    gethomepage.dev/description: "Tailscale only | Media downloader"
    gethomepage.dev/siteMonitor: "http://whisparr.gdd-service.svc:6969"
spec:
  ingressClassName: tailscale
  rules:
    - host: whisparr.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whisparr
                port:
                  number: 6969
  tls:
    - hosts:
        - whisparr.barn-walleye.ts.net
